--- a/stylua.toml
+++ b/stylua.toml
@@ -1,5 +1,5 @@
 column_width = 80
-indent_type = 'Spaces'
+indent_type = 'Tabs'
 indent_width = 4
 quote_style = 'AutoPreferSingle'
 no_call_parentheses = false
