--- a/.luarc.json
+++ b/.luarc.json
@@ -2,5 +2,8 @@
     "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
     "Lua.diagnostics.globals": [
         "vim"
+    ],
+    "diagnostics.disable": [
+        "duplicate-set-field"
     ]
 }
